# cars-api-deploy

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
cars/: admin.py  permissions.py  tests.py  views.py
cars/migrations/: 0001_initial.py
cars_project/: .env  procfile.py  sample.env  settings.py  urls.py
